syntax = "proto3";

package pb;
option go_package = "pb/;pb";

import "common.proto";

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
    string access_token = 2;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
}

message RegisterResponse {
    User user = 1;
    string access_token = 2;
}

message GetMeRequest {
}

message GetMeResponse {
    User user = 1;
}